2011-11-22  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* h5das.cc (is_mappable): added two more unsupported types checking.

2011-10-28  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>
	* HDF5Array.cc (read): handled Int8 to Int16 conversion correctly.

2011-10-27  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>

	* h5das.cc (read_objects): added Int8 to Int16 conversion.
	* h5get.cc (get_dap_type): changed Int16 to Int8.

2011-04-20  James Gallagher <jgallagher@opendap.org>

	Hyrax 1.7 release

2011-04-05  James Gallagher <jgallagher@opendap.org>

	I removed much of the code switched out using '//' or #if 0 if
	those switches or comments were added as part of the code review.

	M    HDF5UInt32.cc
	M    HDF5ArrayEOS.cc
	M    HDF5RequestHandler.cc
	M    HDF5UInt16.cc
	M    h5das.cc
	M    h5dds.cc
	M    h5dds.h
	M    HDF5Float32.cc
	M    HDF5Array.cc
	M    hdf5_handler.h
	M    HDF5Str.cc
	M    HDF5Int32.cc
	M    HDF5Int16.cc
	M    HDF5Byte.cc
	M    h5get.cc
	M    HDF5Float64.cc
	M    HDF5ArrayEOS.h
	M    HE5Parser.cc

2011-04-05  James Gallagher <jgallagher@opendap.org>

	I found one line where names were changed to CF compilant names
	without the #ifdef CF protection. I added it and the issue with
	failed tests went away.

	M    h5dds.cc

2011-03-28  James Gallagher <jgallagher@opendap.org>

	1.7RC1

2011-03-17  Nathan Potter <ndp@coas.oregonstate.edu>

	hdf5_handler: Added automated version numbers to OSX Package builds

2011-03-17  muqun

	Just reflect that we create a patch for 1.4.3 version for NASA.

2011-03-14  muqun

	1. This check-in provides the partial support of handling multiple
	HDF-EOS5 swaths. It will only work for all swaths share the same
	coordinate variables. The solution is mainly for handling Aura MLS
	data. The robust and general solutions should be in the future.
	
	2. Special characters inside the variable names are also handled.
	This was discovered by HIRDLS data.

2011-03-08  James Gallagher <jgallagher@opendap.org>
