@@ -314,12 +314,10 @@ bool HDF5Array::m_array_in_structure()
 
 bool HDF5Array::m_array_of_reference()
 {
-    hdset_reg_ref_t *rbuf = 0;
     try {
 	vector<int> offset(d_num_dim);
 	vector<int> count(d_num_dim);
 	vector<int> step(d_num_dim);
-	hdset_reg_ref_t *rbuf = new hdset_reg_ref_t[d_num_elm];
 
 	int nelms = format_constraint(&offset[0], &step[0], &count[0]); // Throws Error.
 	vector<string> v_str(nelms);
@@ -334,6 +332,10 @@ bool HDF5Array::m_array_of_reference()
 
 	if (H5Tequal(d_ty_id, H5T_STD_REF_DSETREG) > 0) {
 	    DBG(cerr << "=read() Got regional reference. " << endl);
+            hdset_reg_ref_t *rbuf = new hdset_reg_ref_t[d_num_elm];
+            if(rbuf == NULL)
+		throw InternalErr(__FILE__, __LINE__, "new failed()");
+
 	    if (H5Dread(d_dset_id, H5T_STD_REF_DSETREG, H5S_ALL, H5S_ALL, H5P_DEFAULT, &rbuf[0]) < 0) {
 		throw InternalErr(__FILE__, __LINE__, "H5Dread failed()");
 	    }
@@ -460,6 +462,7 @@ bool HDF5Array::m_array_of_reference()
 		    v_str[i] = "";
 		}
 	    }
+            delete[] rbuf;
 	}
 
 	// Handle object reference.
@@ -469,13 +472,17 @@ bool HDF5Array::m_array_of_reference()
 
 	if (H5Tequal(d_ty_id, H5T_STD_REF_OBJ) > 0) {
 	    DBG(cerr << "=read() Got object reference. " << endl);
+            hobj_ref_t *rbuf = new hobj_ref_t[d_num_elm];
+            if(rbuf == NULL)
+		throw InternalErr(__FILE__, __LINE__, "new failed()");
+
 	    if (H5Dread(d_dset_id, H5T_STD_REF_OBJ, H5S_ALL, H5S_ALL, H5P_DEFAULT, &rbuf[0]) < 0) {
 		throw InternalErr(__FILE__, __LINE__, "H5Dread failed()");
 	    }
 
 	    for (int i = 0; i < nelms; i++) {
 		// Let's assume that URL array is always 1 dimension.
-		hid_t did_r = H5Rdereference(d_dset_id, H5R_OBJECT, rbuf[offset[0] + i * step[0]]);
+		hid_t did_r = H5Rdereference(d_dset_id, H5R_OBJECT, &rbuf[offset[0] + i * step[0]]);
 		if (did_r < 0) {
 		    throw InternalErr(__FILE__, __LINE__, "H5Rdereference() failed.");
 		}
@@ -490,18 +497,13 @@ bool HDF5Array::m_array_of_reference()
 		DBG(cerr << "=read() dereferenced name is " << name <<endl);
 		v_str[i] = varname;
 	    }
+            delete[] rbuf;
 	}
 
 	set_value(&v_str[0], nelms);
-
-	delete[] rbuf;
-
 	return false;
     }
     catch (...) {
-	if (rbuf)
-	    delete[] rbuf;
-
 	throw;
     }
 }
