@@ -1,3 +1,8 @@
+2011-12-01  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>
+
+	* HDF5Array.cc (m_array_of_reference): fixed bug in object reference
+	handling.
+
 2011-11-22  Hyo-Kyung (Joe) Lee  <hyoklee@hdfgroup.org>
 
 	* h5das.cc (is_mappable): added two more unsupported types checking.
